@@ -1,12 +1,10 @@
 package org.trianacode.taskgraph.databus;
 
 import java.io.Serializable;
-import java.net.InetAddress;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.UnknownHostException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
-import java.util.Random;
+import java.util.UUID;
 
 import org.trianacode.taskgraph.databus.packet.WorkflowDataPacket;
 
@@ -15,22 +13,34 @@ import org.trianacode.taskgraph.databus.packet.WorkflowDataPacket;
  * identify both the type of the data and the data itself. User: scmijt Date: Jul 23, 2010 Time: 3:15:41 PM To change
  * this template use File | Settings | File Templates.
  */
-public class LocalDataBus implements DatabusInterface {
-    private static HashMap<WorkflowDataPacket, Serializable> datastore = datastore = new HashMap();
-    String TRIANA_PROTOCOL = "triana";
+public class LocalDataBus implements DatabusInterface1 {
 
-    int seed = new Random().nextInt();
+    public static final String LOCAL_PROTOCOL = "local";
+
+    private static HashMap<WorkflowDataPacket, Serializable> datastore = new HashMap();
 
     public LocalDataBus() {
+    }
+
+    @Override
+    public String getProtocol() {
+        return LOCAL_PROTOCOL;
     }
 
     public void putData(WorkflowDataPacket url, Serializable data) {
         datastore.put(url, data);
     }
 
-    public Serializable get(WorkflowDataPacket packet) {
+    public Serializable get(WorkflowDataPacket packet) throws DataNotResolvableException {
         System.out.println("Getting WorkflowDataPacket from store: " + packet.getDataLocation());
-        return datastore.get(packet);
+        Serializable s = datastore.get(packet);
+        if (s == null) {
+            throw new DataNotResolvableException("No data for packet:" + packet.getDataLocation());
+        }
+        if (packet.isDeleteAfterUse()) {
+            datastore.remove(packet);
+        }
+        return s;
     }
 
     public void remove(WorkflowDataPacket packet) {
@@ -39,32 +49,22 @@ public class LocalDataBus implements DatabusInterface {
 
 
     public WorkflowDataPacket addObject(Serializable data, boolean deleteAfterUse) {
-        String datatype = data.getClass().getName();
-        String identifier = Integer.toString(new Random(seed).nextInt()); // Andrew will cringe, but it'll work :)
+        //String identifier = Integer.toString(new Random(seed).nextInt());
+        // Andrew will cringe, but it'll work :)
 
-        WorkflowDataPacket packet = null;
+        // hahaha - I did indeed :-)
+        // because it always creates the same identifier!!
 
-        String host = "localhost";
-
-        try { // probably better ...
-            host = InetAddress.getLocalHost().getHostName();
-        } catch (UnknownHostException e) {
-            e.printStackTrace();  //To change body of catch statement use File | Settings | File Templates.
-        }
+        WorkflowDataPacket packet;
 
         try {
-            packet = new WorkflowDataPacket(new URL("http", host, 8080, datatype + "-" + identifier), deleteAfterUse);
-        } catch (MalformedURLException e) {
-            e.printStackTrace();  //To change body of catch statement use File | Settings | File Templates.
+            packet = new WorkflowDataPacket(new URI("local:" + UUID.randomUUID().toString()), deleteAfterUse);
+        } catch (URISyntaxException e) {
+            e.printStackTrace();
+            return null;
         }
-
-        // Here we Add to restless server once we hook that in.
-
-
         // lob the doofer into the whotsit.
-
         putData(packet, data);
-
         return packet;
     }
 }
